@@ -1,3 +1,8 @@
+2004-01-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* sock2.adb, sock2.out, makefile:
+	New regression test.
+
 2004-01-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* cert.adb:
